Fix contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -234,3 +234,32 @@ fieldset {
   margin-bottom: 10px;
   padding: 4px 8px;
 }
+
+.background-grey-light {
+  background-color: #f5f5f5;
+}
+
+button.is-danger,
+.tag.is-danger {
+  background-color: #bf2a48;
+}
+
+button.is-primary,
+.tag.is-primary {
+  background-color: #008a75;
+}
+
+button.is-success,
+.tag.is-success {
+  background-color: #147536;
+}
+
+button.is-info,
+.hero.is-info,
+.tag.is-info {
+  background-color: #1b70a8 !important;
+}
+
+a {
+  color: #0033bf;
+}
